# CoEvo

./: .gitignore  README.md  main_run.py  model_config.json  test_migration.py  test_res.py
CoEvo/: README.md  pyproject.toml  quick_test.py
CoEvo/src/coevo/: __init__.py
CoEvo/src/coevo/core/: __init__.py  coevo_interface.py  coevo_method.py  coevo_state.py  eoh_interface.py  nds.py  summarizer.py
CoEvo/src/coevo/core/prompts/: __init__.py  coevo_prompts.py  prompt_templates.py
CoEvo/src/coevo/examples/science/bactgrow/: __init__.py  bactgrow_evaluator.py  bactgrow_task_info.py  temp_module.py
CoEvo/src/coevo/examples/science/oscillation_1/: __init__.py  oscillation_1_evaluator.py  oscillation_1_task_info.py  temp_module.py
CoEvo/src/coevo/examples/science/oscillation_2/: __init__.py  oscillation_2_evaluator.py  oscillation_2_task_info.py  temp_module.py
CoEvo/src/coevo/examples/science/stress_strain/: __init__.py  stress_strain_evaluator.py  stress_strain_task_info.py  temp_module.py
CoEvo/src/coevo/llm/: llm_api_https.py
CoEvo/src/coevo/methods/: base_agent.py  base_logger.py  base_paras.py
CoEvo/src/coevo/methods/coevo/: __init__.py  coevoagent.py  coevoparas.py  coevoprompts.py  coevosummarizer.py
CoEvo/src/coevo/methods/eoh/: __init__.py  eohagent.py  eohparas.py  eohprompts.py
CoEvo/src/coevo/tasks/: __init__.py  bactgrow.py  coevo_task.py  oscillation_1.py  oscillation_2.py  stress_strain.py
CoEvo/src/coevo/tasks/base/: __init__.py  base_evaluator.py  base_task_info.py
CoEvo/src/coevo/tasks/program_design/: __init__.py  program_evaluator.py  program_task_info.py
CoEvo/src/coevo/utils/: string_formatter.py
(+28 files in other folders)
