[project]
name = "coevo"
version = "1.0.0"
description = "Continual Evolution of Symbolic Solutions Using Large Language Models"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "joblib",
    "transformers",
    "scikit-learn",
    "pandas",
    "tensorboard",
    "natsort",
    "evotoolkit>=1.0.2"
]
authors = [
    { name="Ping Guo", email="pingguo5-c@my.cityu.edu.hk" }
]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
