[project]
name = "coevo"
version = "1.0.0"
description = "Continual Evolution of Symbolic Solutions Using Large Language Models"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "natsort",
    "evotoolkit>=1.0.2"
]
authors = [
    { name="Ping Guo", email="pingguo5-c@my.cityu.edu.hk" }
]
readme = "README.md"

[project.optional-dependencies]
summarizer = [
    "torch",
    "transformers",
    "tensorboard",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
